css/main.css
/*



    *****************************************


    - Fonts
    - General CSS
    - Header
    - Home/portfolio
    - Inner page
    - Map/Contact page
    - Tooltip
    - Responsive code


*/



/*  Fonts  */
@font-face {
    font-family: 'raleway-regular';
    src: url('../fonts/raleway-regular.eot');
    src: url('../fonts/raleway-regular.eot?#iefix') format('embedded-opentype'),
        url('../fonts/raleway-regular.woff') format('woff'),
        url('../fonts/raleway-regular.ttf') format('truetype'),
        url('../fonts/raleway-regular.svg#ralewayregular') format('svg');
    font-weight: normal;
    font-style: normal;

}


@font-face {
    font-family: 'raleway-bold';
    src: url('../fonts/raleway-bold.eot');
    src: url('../fonts/raleway-bold.eot?#iefix') format('embedded-opentype'),
        url('../fonts/raleway-bold.woff') format('woff'),
        url('../fonts/raleway-bold.ttf') format('truetype'),
        url('../fonts/raleway-bold.svg#ralewaybold') format('svg');
    font-weight: normal;
    font-style: normal;

}


@font-face {
    font-family: 'raleway-semibold';
    src: url('../fonts/raleway-semibold.eot');
    src: url('../fonts/raleway-semibold.eot?#iefix') format('embedded-opentype'),
        url('../fonts/raleway-semibold.woff') format('woff'),
        url('../fonts/raleway-semibold.ttf') format('truetype'),
        url('../fonts/raleway-semibold.svg#ralewaysemibold') format('svg');
    font-weight: normal;
    font-style: normal;

}



/*  General CSS*/
body {
    background: #07090f;
}

.wrapper {
    width: 92.72727272727273%;
    margin: 0 auto;
}

header ul.social li a,
.main .work a .caption,
header nav ul li a {
    transition: all .1s linear;
    -webkit-transition: all .1s linear;
    -moz-transition: all .1s linear;
    -o-transition: all .1s linear;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: #4b4848;
    font-family: "raleway-regular", arial;
    letter-spacing: 1px;
}

h1 {
    font-size: 2em;
    margin: .67em 0
}

h2 {
    font-size: 1.5em;
    margin: .75em 0
}

h3 {
    font-size: 1.17em;
    margin: .83em 0
}

h5 {
    font-size: .83em;
    margin: 1.5em 0
}

h6 {
    font-size: .75em;
    margin: 1.67em 0
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-weight: bolder
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}







/*  Header  */
@media (min-width:1099px) {
    header {
        display: block;
        position: fixed;
        top: 0;
        left: 0;
        width: 250px;
        min-height: 100%;
        padding: 0 0 0 50px;
        background: #080b12;
        float: left;
        overflow: hidden;
        z-index: 9999;
    }

    header .logo {
    margin-right: 5%;
        margin-top: 20px;
        background: #080b12;
        border-radius: 18px;
        overflow: hidden;
    }

    header .logo .logo_full {
        display: block;
        background: #080b12;
    }

    header .logo .logo_mobile {
        display: none;
    }

    header nav ul {
        display: block;
        overflow: hidden;
        margin-top: 40px;
        list-style: none;
    }

    header nav ul li {
        display: block;
        margin-bottom: 30px;
    }

    header nav ul li a {
        color: #e3f2fd;
        font-family: "raleway-regular", arial;
        font-size: 14px;
        text-decoration: none;
        letter-spacing: 1px;
    }

    header nav ul li a:hover,
    header nav ul li a.selected {
        color: #969595;
    }

    header .footer {
        position: absolute;
        bottom: 50px;
    }

    header ul.social {
        list-style: none;
        margin-bottom: 5px;
    }

    header ul.social li {
        display: block;
        float: left;
        position: relative;
        margin: 0 15px 15px 0;
    }


    header ul.social li a {
        display: block;
        width: 30px;
        height: 30px;
        background: url('../img/sm.png') no-repeat;
        background-position: 0 0;
    }


    header ul.social li a:hover {
        background: url('../img/sm2_hover.png') no-repeat;
    }



    header ul.social li a.fb,
    header ul.social li a.fb:hover {
        background-position: 0 0;
    }


    header ul.social li a.google,
    header ul.social li a.google:hover {
        background-position: -31px 0;
    }

    header ul.social li a.behance,
    header ul.social li a.behance:hover {
        background-position: -62px 0;
    }

    header ul.social li a.twitter,
    header ul.social li a.twitter:hover {
        background-position: -93px 0;
    }

    header ul.social li a.dribble,
    header ul.social li a.dribble:hover {
        background-position: -124px 0;
    }

    header ul.social li a.rss,
    header ul.social li a.rss:hover {
        background-position: -155px 0;
    }

    header .rights p {
        color: #454545;
        font-family: "raleway-regular", arial;
        font-size: 11px;
        letter-spacing: 1px;
        line-height: 18px;
    }

    header .rights a {
        font-family: "raleway-bold", arial;
        font-weight: bold;
        text-decoration: none;
    }

    #menu_icon,
    .close_menu {
        display: none;
    }

}

#menu_icon,
.close_menu {
    float: right;
    margin-right: 40px;
    width: 40px;
    height: 40px;
    cursor: pointer;
    background: url('../img/men_icons.png') no-repeat;
}

#menu_icon {
    background-position: 0 0;
}

.close_menu {
    background-position: -41px 0 !important;
}






/*  Main  */
.main {
    width: 100%;
    height: 100%;
    padding-left: 300px;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    position: relative;
    z-index: 55;
    background: #07090f;
    clear: both;
}







/*  Home portfolio  */
.main .work {
    display: block;
    width: 33.33333333333333%;
    height: auto;
    float: left;
    position: relative;
    overflow: hidden;
}
/* ... */

